--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,28 @@
 {% assign theme = site.data.themes[site.ui_theme] %}
 <html lang="{{ site.lang }}">
   {% include head.html %}
+
+  <!-- Intro Start -->
+
+<header class="intro">
+  <div class="intro-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <h1 class="brand-heading">&nbsp;</h1>
+          <h1 class="brand-heading">&nbsp;</h1>
+          <span class="intro-text">{{ content }}</span>
+          <h5>&nbsp;</h5>
+            <img class="img-me" src="{{ site.me-img }}" alt="" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!-- Intro End -->
+  
   <body style="background-color:{{theme.background-color}};">
     {% include nav.html %}
     <div class="dumbarton-spacer-sm"></div>
