--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <body style="background-color:{{theme.background-color}};">
     {% include nav.html %}
     <div class="dumbarton-spacer-sm"></div>
-    <div class="intro-text row"></span>
+    <div class="intro-text row"></div>
     <div class="container">
       {{ content }}
     </div>
