--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,3 +12,22 @@
     {% include footer.html %}
   </body>
 </html>
+
+<!-- Dynamic Typing Start -->
+
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"
+></script>
+<script type="text/javascript">
+  $("#intro-text").typed({
+    strings: ["{{ site.quote }}"],
+    typeSpeed: 3,
+    startDelay: 1000,
+    loop: false,
+    loopCount: 1,
+    cursorChar: "|",
+  });
+</script>
+
+<!-- Dynamic Typing End  -->
