--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
   <body style="background-color:{{theme.background-color}};">
     {% include nav.html %}
     <div class="dumbarton-spacer-sm"></div>
-    <div id="intro-text" class="intro-text row"></div>
     <div class="container">
+       <span id="intro-text" class="intro-text row"></span>
       {{ content }}
     </div>
     {% include footer.html %}
@@ -20,7 +20,7 @@
   src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"
 ></script>
 <script type="text/javascript">
-  $("#intro-text").typed({
+  $(".intro-text").typed({
     strings: ["{{ site.quote }}"],
     typeSpeed: 3,
     startDelay: 1000,
