--- a/css/main.css
+++ b/css/main.css
@@ -968,3 +968,37 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
   }
 }
  /* end of timeline */
+
+
+.intro {
+  display: table;
+  width: 100%;
+  height: auto;
+  padding: 100px 0;
+  text-align: center;
+  color: $intro-text-color;
+  background-color: $header-background-color;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  .intro-body {
+    display: table-cell;
+    vertical-align: middle;
+    .intro-text {
+      font-size: 2.3rem;
+      @if $navbar-text-shadow {
+        text-shadow: 1px 0 1px #222222;
+      }
+    }
+  }
+  @media (min-width: 768px) {
+    height: 100%;
+    padding: 0;
+    .intro-body {
+      .intro-text {
+        font-size: 2.5rem;
+      }
+    }
+  }
+}
