--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,19 +17,56 @@
 
 <!-- Dynamic Typing Start -->
 
-<script
-  type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"
-></script>
-<script type="text/javascript">
-  $(".intro-text").typed({
-    strings: ["{{ site.quote }}"],
-    typeSpeed: 3,
-    startDelay: 1000,
-    loop: false,
-    loopCount: 1,
-    cursorChar: "|",
-  });
-</script>
+ {% if site.dynamic-typing %}
+
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"
+  ></script>
+
+  <script type="text/javascript">
+
+    var myQuotes =  new Array();
+    {% for line in site.lines %}
+      myQuotes.push("{{ line.text }}");
+    {% endfor %}
+
+    function shuffle(array) {
+      var currentIndex = array.length, temporaryValue, randomIndex ;
+
+      // While there remain elements to shuffle...
+      while (0 !== currentIndex) {
+
+        // Pick a remaining element...
+        randomIndex = Math.floor(Math.random() * currentIndex);
+        currentIndex -= 1;
+
+        // And swap it with the current element.
+        temporaryValue = array[currentIndex];
+        array[currentIndex] = array[randomIndex];
+        array[randomIndex] = temporaryValue;
+      }
+
+      return array;
+    }
+
+    {% if site.shuffle %}
+      shuffle(myQuotes)
+    {% endif %}
+
+    $(".intro-text").typed({
+      strings: myQuotes,
+      typeSpeed: {{ site.type-speed }},
+      backDelay: {{ site.delete-delay }},
+      startDelay: {{ site.start-delay }},
+      loop: {{ site..loop }},
+      loopCount: {{ site.loop-count }},
+      cursorChar: "|"
+    });
+  </script>
+
+  <!-- Dynamic Typing End  -->
+
+  {% endif %}
 
 <!-- Dynamic Typing End  -->
