--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,24 +3,6 @@ layout: default
 ---
 {% assign theme = site.data.themes[site.ui_theme] %}
 
-<!--  HELP TIPS SECTION  -->
-<!-- used only for develop mode, disable these in _config.yml with `help_tips: false` -->
-{% if site.help_tips %}
-<div class="toast animate__animated animate__pulse animate__infinite" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false" data-delay="10000" style="position: absolute; top: 10px; right: 10px;z-index: 10000;">
-  <div class="toast-header">
-    <img src="/assets/img/icons/favicon-16x16.png" class="rounded mr-2" alt="...">
-    <strong class="mr-auto">Reems</strong>
-    <small class="text-muted">11 mins ago</small>
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="toast-body">
-    Thanks for checking out Jekyll-Theme-Dumbarton ! This theme was developed by Tyler Butler</a>. If you're interested in using this in your own website, checkout the project on <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton">Github</a>
-  </div>
-</div>
-{% endif %}
-
 <!-- ABOUT ME SECTION -->
 <div class="card mx-auto border-0" style="position:relative;background-color:{{theme.home-background-color}};">
   <div class="row">
@@ -31,7 +13,13 @@ layout: default
         <img src="{{ site.profile_image }}" class="img-me float-left" alt="..." style="border-radius:50%; width:300px; height:200px; object-fit:cover; border: 3px solid #149f98;"/>
       {% endif %}
     </div>
-    
+
+    <div class="intro">
+        <div class="intro-body">
+          <span class="intro-text"></span>
+        </div>
+    </div>
+   
     <!-- SECTION -->
     <div class="col-md-8">      
       {% if site.animate %}
