--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,13 +13,7 @@ layout: default
         <img src="{{ site.profile_image }}" class="img-me float-left" alt="..." style="border-radius:50%; width:300px; height:200px; object-fit:cover; border: 3px solid #149f98;"/>
       {% endif %}
     </div>
-
-    <div class="intro">
-        <div class="intro-body">
-          <span class="intro-text"></span>
-        </div>
-    </div>
-   
+       
     <!-- SECTION -->
     <div class="col-md-8">      
       {% if site.animate %}
@@ -29,9 +23,19 @@ layout: default
       {% endif %}
        
       <p style="color:{{theme.education-font-color}};">{{ content | markdownify}}<p>
+
+      <div class="intro">
+        <div class="intro-body">
+          <span class="intro-text"></span>
+        </div>
+      </div>
+        
+        <!-- education -->
         {% if site.home_option == "education" %}
           {% include education.html %}
         {% endif %}
+
+        
       </div>          
     </div>
       
