--- a/css/main.css
+++ b/css/main.css
@@ -973,7 +973,7 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
   height: auto;
   padding: 100px 0;
   color: #fff;
-  background: url(../img/intro-bg.gif) no-repeat bottom center scroll;
+  background: url(/assets/img/intro-bg.gif) no-repeat bottom center scroll;
   background-color: #000;
   -webkit-background-size: cover;
   -moz-background-size: cover;
