--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 {% assign theme = site.data.themes[site.ui_theme] %}
 <html lang="{{ site.lang }}">
   {% include head.html %}
-  <body style="background-color:{{theme.background-color}};">
+  <body style="background-color:{{theme.background-color}};" class="bg-img">
     {% include nav.html %}
     <div class="dumbarton-spacer-sm"></div>
     <div class="container">
